# SPDX-License-Identifier: MIT-0

workspace(name = "drake_sys_id")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "drake",
    urls = [
        "https://github.com/RobotLocomotion/drake/archive/refs/tags/v1.22.0.tar.gz",  # noqa
    ],
    sha256 = "78cf62c177c41f8415ade172c1e6eb270db619f07c4b043d5148e1f35be8da09",  # noqa
    strip_prefix = "drake-1.22.0",
)

load("@drake//tools/workspace:default.bzl", "add_default_workspace")
add_default_workspace()

load("//tools/workspace/pytorch:repository.bzl", "pytorch_repository")
pytorch_repository(name = "pytorch")
